src/test/ui/parser/column-offset-1-based.stderr
error: expected `[`, found `<eof>`
  --> $DIR/column-offset-1-based.rs:1:1
   |
LL | #
   | ^ expected `[`

error: aborting due to previous error

